--- a/html/biographie.html
+++ b/html/biographie.html
@@ -12,50 +12,75 @@
 <body class="bio">
 	<header class="bioHeader">
 		<nav class="menu">
+			<h1 class="hidden">Menu</h1>
 			<input type="checkbox" title="menu" class="menu__check" id="toogle-nav" checked>
-			<label for="toogle-nav" class="menu__drop"></label>
+			<label for="toogle-nav" checked="checked" class="menu__drop"></label>
 			<ul class="menu__list">
-					<li class="menu__elt"><a href="../index.html"  class="menu__link" title="">Accueil</li></a>
-					<li class="menu__elt active">Biographie</li></a>
-					<li class="menu__elt"><a href="discographie.html" title="Lien vers la discographie de Hardwell" class="menu__link">Discographie</li></a>
-					<li class="menu__elt"><a href="evenement.html" title="Lien vers la evenement de Hardwell" class="menu__link">Evenement</li></a>
-					<li class="menu__elt"><a href="contact.html" title="Lien vers la page de contact de Hardwell" class="menu__link">Contact</li></a>
-
-
+					<li class="menu__elt"><a href="../index.html"  class="menu__link" title="">Accueil</a></li>
+					<li class="menu__elt active">Biographie</li>
+					<li class="menu__elt"><a href="discographie.html" title="Lien vers la discographie de Hardwell" class="menu__link">Discographie</a></li>
+					<li class="menu__elt"><a href="evenement.html" title="Lien vers la evenement de Hardwell" class="menu__link">Événement</a></li>
+					<li class="menu__elt"><a href="contact.html" title="Lien vers la page de contact de Hardwell" class="menu__link">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
 	<main class="mainBio">
 		<div class="main">
+			<svg height="0" width="0">
+				<defs>
+				<clipPath id="clipTriTitle" clipPathUnits="objectBoundingBox">
+					<polygon points="1 0,0.5 1,0 0">
+					</polygon>
+				</clipPath>
+			</defs>
+			</svg>
 			<h1 role="heading" aria-level="1" class="main__title">Biographie</h1>
 		</div>
 		<div class="mainBio__photoG">
+			<svg height="0" width="0">
+				<defs>
+				<clipPath id="clipPhotoG" clipPathUnits="objectBoundingBox">
+					<polygon points="0 0,0.96 0.1,0.95 0.7, 0 0.85">
+					</polygon>
+				</clipPath>
+			</defs>
+			</svg>
 		</div>
 			<div class="mainBio__text">
+				<h2 role="heading" aria-level="2" class="mainBio__title">Tout a commencé le 7 janvier 1988 ...</h2>
 				<p class="mainBio__paraD">
-					Hardwell, de son vrai nom Robbert van de Corput, né le 7 janvier 1988 à Bréda, est un disc jockey et producteur de musique house et électronique néerlandais. Classé depuis 2013 meilleur DJ mondial par DJ Magazine, il s'illustre dans les genres house progressive et electro house.
-					Hardwell apprend le piano à 6 ans et manifeste un intérêt certain pour la musique électronique. Dès 14 ans, il mixe dans les clubs les plus réputés des Pays-Bas, alors accompagné par ses parents pour chacune de ses performances puisqu'il n'était pas autorisé à y entrer seul. En 2008, il se fait connaître sur la scène internationale avec son titre Show Me Love vs. Be, repris ensuite par les meilleurs DJs.
+					Hardwell, de son vrai nom Robbert van de Corput, est un disc jockey et producteur de musique house et électronique néerlandais. Classé depuis 2013 meilleur DJ mondial par DJ Magazine, il s'illustre dans les genres house progressive et electro house.
+					Hardwell apprend le piano à 6 ans et manifeste un intérêt certain pour la musique électronique. <span class="big">Dès 14 ans, il mixe dans les clubs les plus réputés des Pays-Bas</span>, alors accompagné par ses parents pour chacune de ses performances puisqu'il n'était pas autorisé à y entrer seul. En 2008, il se fait connaître sur la scène internationale avec son titre Show Me Love vs. Be, repris ensuite par les meilleurs DJs.
 				</p>
 			</div>
-		<div class="mainBio__photoD"></div>
+			<a href="discographie.html" class="cta cta--bio">Envie de passer à l'écoute?</a>
+		<div class="mainBio__photoD">
+			<svg height="0" width="0">
+				<defs>
+				<clipPath id="clipPhotoD" clipPathUnits="objectBoundingBox">
+					<polygon points="1 0,0 0.09,0 0.7, 1 0.85">
+					</polygon>
+				</clipPath>
+			</defs>
+			</svg>
+		</div>
 		<div class="mainBio__text">
 			<p class="mainBio__paraG">
-				 Il fonde son propre label deux ans plus tard, Revealed Recordings. 2012 est une année très importante pour lui. Il sort son single Spaceman qui devient une référence. En mars, il joue pour la première fois sur la scène principale de l'Ultra Music Festival de Miami, puis joue à Tomorrowland en juillet. Son set, qui atteint 22 millions de vues en 2015 sur YouTube, est considéré par beaucoup comme la meilleure performance EDM de l'année. Il signe une nouvelle collaboration majeure, avec Showtek, How We Do. Il se classe alors 6e au classement DJ Mag..
+				 Il fonde son propre label deux ans plus tard, <a href="http://www.revealedrecordings.com/" title="Lien vers la page de Revealed Recordings" class="mainBio__cta">Revealed Recordings.</a> <span class="mainBio__hors">2012 est une année très importante pour lui. Il sort son single Spaceman qui devient une référence.</span> En mars, il joue pour la première fois sur la scène principale de l'Ultra Music Festival de Miami, puis joue à Tomorrowland en juillet. Son set, qui atteint 22 millions de vues en 2015 sur YouTube, est considéré par beaucoup comme la meilleure performance EDM de l'année. Il signe une nouvelle collaboration majeure, avec Showtek, How We Do. Il se classe alors 6e au classement DJ Mag..
 				</p>
 				<p class="mainBio__paraG-suite">En avril, il lance sa tournée mondiale I Am Hardwell. Comme l'année précédente, il joue au festival belge Tomorrowland. Une nouvelle fois très attendu, Hardwell se montre à la hauteur des attentes. En octobre 2013, il dépasse Armin van Buuren et devient le meilleur DJ du monde selon le classement DJ Magazine, place qu'il conservera l'année suivante5. Son premier album, United We Are, sort en janvier 2015.
-				</span></p>
+				<a href="evenement.html" class="mainBio__cta">N'hésitez pas à regarder les prochains événements&nbsp;!</a></p>
 
 		</div>
 	</main>
-	<footer class="footer">
+	<footer class="footer footer__bio">
 			<ul class="footer__list">
-					<!--<a href="" title=""><li class="footer__Elt">Accueil</li></a>-->
-					<li class="footer__elt"><a href="" title="" class="footer__link fb">Facebook</li></a>
-					<li class="footer__elt"><a href="" title="" class="footer__link insta">Instagram</li></a>
-					<li class="footer__elt"><a href="" title="" class="footer__link yt">Youtube</li></a>
-					<li class="footer__elt"><a href="" title="" class="footer__link twi">Twitter</li></a>
-					<li class="footer__elt design"><a href="" title="" class="design__link">Designed by Christine Jend.</li></a>
-			</ul>
+				<li class="footer__elt"><a href="https://www.facebook.com/djhardwell/?fref=ts" title="Lien vers la page facebook de Hardwell" class="footer__link fb hidden">Facebook</a></li>
+				<li class="footer__elt"><a href="https://www.instagram.com/hardwell/" title="Lien vers la page instagram de Hardwell" class="footer__link insta hidden">Instagram</a></li>
+				<li class="footer__elt"><a href="https://www.youtube.com/user/robberthardwell" title="Lien vers la page youtube de Hardwell" class="footer__link yt hidden">Youtube</a></li>
+				<li class="footer__elt"><a href="https://twitter.com/hardwell" title="Lien vers la page twitter de Hardwell" class="footer__link twi hidden">Twitter</a></li>
+				<li class="footer__elt design"><a href="http://christinejend.be" title="Lien vers le portfolio de Christine Jend, webdesigner" class="design__link">Designed by Christine Jend.</a></li>
+		</ul>
 
 	</footer>
 </body>
